--- a/hello.handlebars
+++ b/hello.handlebars
@@ -127,7 +127,7 @@
                         <div id="p11bigfail" style="display:none"><b>&#10007;</b></div>
                         <div id=DeskFocus oncontextmenu="return false" onmousedown=dmousedown(event) onmouseup=dmouseup(event) onmousemove=dmousemove(event)></div>
                         <div id=DeskParent>
-                            <canvas id=Desk tabindex="0" width=640 height=480 oncontextmenu="return false" onmousedown=dmousedown(event) onmouseup=dmouseup(event) onmousemove=dmousemove(event) onmousewheel=dmousewheel(event)></canvas>
+                            <canvas id=Desk width=640 height=480 oncontextmenu="return false" onmousedown=dmousedown(event) onmouseup=dmouseup(event) onmousemove=dmousemove(event) onmousewheel=dmousewheel(event)></canvas>
                         </div>
                         <div id=DeskTools>
                             <div id=deskToolsAreaTop>
@@ -19246,4 +19246,5 @@ var random = '{{{randomlength}}}' // Random length string for BREACH mitigation
     </script>
 </body>
 </html>
+
    
